Create structure of project & config sequelize

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js",
+    "dbcreate": "npx sequelize db:create",
+    "dbdrop": "npx sequelize db:drop",
+    "migall": "npx sequelize db:migrate",
+    "migun": "npx sequelize db:migrate:undo:all"
   },
   "keywords": [],
   "author": "",
