--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "migall": "npx sequelize db:migrate",
     "migun": "npx sequelize db:migrate:undo:all",
     "genAuthors": "npx sequelize model:generate --name Author --attributes full_name:string,email:string,country:string",
-    "genGenres": "npx sequelize model:generate --name Genre --attributes title:string"
+    "genGenres": "npx sequelize model:generate --name Genre --attributes title:string",
+    "genCountry": "npx sequelize model:generate --name Country --attributes title:string,description:text"
   },
   "keywords": [],
   "author": "",
