--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "genGenres": "npx sequelize model:generate --name Genre --attributes title:string",
     "genCountry": "npx sequelize model:generate --name Country --attributes title:string,description:text",
     "genShelf": "npx sequelize model:generate --name Shelf --attributes title:string,description:text",
-    "genCustomer": "npx sequelize model:generate --name Customer --attributes full_name:string,email:string,phone:string,password:string"
+    "genCustomer": "npx sequelize model:generate --name Customer --attributes full_name:string,email:string,phone:string,password:string",
+    "genOrder": "npx sequelize model:generate --name Order --attributes title:string,order_date:date,customer:string"
   },
   "keywords": [],
   "author": "",
