Generate seed Author

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "dbdrop": "npx sequelize db:drop",
     "migall": "npx sequelize db:migrate",
     "migun": "npx sequelize db:migrate:undo:all",
-    "genAuthors": "npx sequelize model:generate --name Author --attributes full_name:string,email:string,country:string",
-    "genGenres": "npx sequelize model:generate --name Genre --attributes title:string",
-    "genCountry": "npx sequelize model:generate --name Country --attributes title:string,description:text",
-    "genShelf": "npx sequelize model:generate --name Shelf --attributes title:string,description:text",
-    "genCustomer": "npx sequelize model:generate --name Customer --attributes full_name:string,email:string,phone:string,password:string",
-    "genOrder": "npx sequelize model:generate --name Order --attributes title:string,order_date:date,customer:string",
-    "genBook": "npx sequelize model:generate --name Book --attributes title:string,genre:string,shelf:string,description:text,image:string"
+    "seedall": "npx sequelize db:seed:all",
+    "seedun": "npx sequelize db:seed:undo:all",
+    "genModAuthors": "npx sequelize model:generate --name Author --attributes full_name:string,email:string,country:string",
+    "genModGenres": "npx sequelize model:generate --name Genre --attributes title:string",
+    "genModCountry": "npx sequelize model:generate --name Country --attributes title:string,description:text",
+    "genModShelf": "npx sequelize model:generate --name Shelf --attributes title:string,description:text",
+    "genModCustomer": "npx sequelize model:generate --name Customer --attributes full_name:string,email:string,phone:string,password:string",
+    "genModOrder": "npx sequelize model:generate --name Order --attributes title:string,order_date:date,customer:string",
+    "genModBook": "npx sequelize model:generate --name Book --attributes title:string,genre:string,shelf:string,description:text,image:string",
+    "genSeedAuthors": "npx sequelize seed:generate --name author"
   },
   "keywords": [],
   "author": "",
